--- a/Assignment 1/codes/main.tex
+++ b/Assignment 1/codes/main.tex
@@ -1,11 +1,47 @@
 \documentclass[journal,12pt,twocolumn]{IEEEtran}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{listings}
-\usepackage{physics}
-\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
-\let\vec\mathbf
+\usepackage{amsthm}
 \usepackage{graphicx}
+\usepackage{mathrsfs}
+\usepackage{txfonts}
+\usepackage{stfloats}
+\usepackage{pgfplots}
+\usepackage{cite}
+\usepackage{cases}
+\usepackage{mathtools}
+\usepackage{caption}
+\usepackage{enumerate}	
+\usepackage{enumitem}
+\usepackage{amsmath}
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+\usepackage{multicol}
+%\usepackage{xtab}
+\usepackage{longtable}
+\usepackage{multirow}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+\usepackage{enumitem}
+\usepackage{mathtools}
+\usepackage{gensymb}
+\usepackage{hyperref}
+%\usepackage[framemethod=tikz]{mdframed}
+\usepackage{listings}
+    %\usepackage[latin1]{inputenc}                                 %%
+    \usepackage{color}                                            %%
+    \usepackage{array}                                            %%
+    \usepackage{longtable}                                        %%
+    \usepackage{calc}                                             %%
+    \usepackage{multirow}                                         %%
+    \usepackage{hhline}                                           %%
+    \usepackage{ifthen}                                         %%
+  \providecommand{\nCr}[2]{\,^{#1}C_{#2}}
+  \providecommand{\nPr}[2]{\,^{#1}P_{#2}}
+  \lstset{
+%language=C,
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
 
 \title{Assignment 1
 \\Probability and Random Variables }
@@ -39,10 +75,13 @@ For the obtained expression, the MGF (0) =1.
 \caption{Result obtained from python code }
 \label{Fig:1}
 \end{figure}
-\\Python code link 
+\\\textbf{Download python code from here}\\
 \begin{lstlisting}
-https://github.com/Swati-Mohanty/AI5002
-/blob/main/Assignment%201/codes/mgf.py
+https://github.com/Swati-Mohanty/AI5002/blob/main/Assignment%201/codes/mgf.py
+\end{lstlisting}
+\\\textbf{Download latex code from here-}\\
+\begin{lstlisting}
+https://github.com/Swati-Mohanty/AI5002/blob/main/Assignment%201/codes/main.tex
 \end{lstlisting}
 
 \end{document}
