--- a/bernoulli_dist.ipynb
+++ b/bernoulli_dist.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "bernoulli_dist.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/U4E9Q4ZMtAbOqs9vffW/",
+      "authorship_tag": "ABX9TyPhK1bJG+v1ynW7zZLkvtGy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y_6e-7XTLGsY",
-        "outputId": "966e7fbc-854e-4bbd-ea87-f603ddfe7339"
+        "outputId": "1a9dd7c8-69ec-480f-d6a2-0144c3aa9a14"
       },
       "source": [
         "from scipy.stats import bernoulli\r\n",
@@ -46,15 +46,38 @@
         "\r\n",
         "#Variance\r\n",
         "var=bernoulli.var(p)\r\n",
-        "print (\"Variance =\", var)"
+        "print (\"Variance =\", var)\r\n",
+        "\r\n",
+        "#Generating random variables \r\n",
+        "p=0.7\r\n",
+        "a=0\r\n",
+        "r = bernoulli.rvs(p, size=1000)\r\n",
+        "#print(r)\r\n",
+        "for i in range(1000):\r\n",
+        "  if(r[i]==1):\r\n",
+        "    a+=1\r\n",
+        "a= a/1000\r\n",
+        "print(a)\r\n",
+        "#Mean\r\n",
+        "mean=bernoulli.mean(a)\r\n",
+        "print(\"Generated samples \")\r\n",
+        "print (\"Mean =\", mean)\r\n",
+        "\r\n",
+        "#Variance\r\n",
+        "var=bernoulli.var(a)\r\n",
+        "print (\"Variance =\", var)\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Mean = 0.7\n",
-            "Variance = 0.21000000000000002\n"
+            "Variance = 0.21000000000000002\n",
+            "0.706\n",
+            "Generated samples \n",
+            "Mean = 0.706\n",
+            "Variance = 0.20756400000000003\n"
           ],
           "name": "stdout"
         }
