--- a/bernoulli_dist.ipynb
+++ b/bernoulli_dist.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "bernoulli_dist.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPhK1bJG+v1ynW7zZLkvtGy",
+      "authorship_tag": "ABX9TyMMBQ1W6QdmC6bZClEJEiuO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y_6e-7XTLGsY",
-        "outputId": "1a9dd7c8-69ec-480f-d6a2-0144c3aa9a14"
+        "outputId": "b532da34-9160-4b1b-8a8c-a2c382c38a24"
       },
       "source": [
         "from scipy.stats import bernoulli\r\n",
         "import matplotlib.pyplot as plt\r\n",
+        "import numpy as np\r\n",
         "\r\n",
         "#probability of sucess\r\n",
         "p=0.7\r\n",
@@ -50,13 +51,9 @@
         "\r\n",
         "#Generating random variables \r\n",
         "p=0.7\r\n",
-        "a=0\r\n",
-        "r = bernoulli.rvs(p, size=1000)\r\n",
-        "#print(r)\r\n",
-        "for i in range(1000):\r\n",
-        "  if(r[i]==1):\r\n",
-        "    a+=1\r\n",
-        "a= a/1000\r\n",
+        "r = np.array(bernoulli.rvs(p, size=1000))\r\n",
+        "a=(np.sum(r))/1000\r\n",
+        "\r\n",
         "print(a)\r\n",
         "#Mean\r\n",
         "mean=bernoulli.mean(a)\r\n",
@@ -65,19 +62,25 @@
         "\r\n",
         "#Variance\r\n",
         "var=bernoulli.var(a)\r\n",
-        "print (\"Variance =\", var)\r\n"
+        "print (\"Variance =\", var)\r\n",
+        "\r\n",
+        "#print(r)\r\n",
+        "#for i in range(1000):\r\n",
+        "  #if(r[i]==1):\r\n",
+        "    #a+=1\r\n",
+        "#a= a/1000"
       ],
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Mean = 0.7\n",
             "Variance = 0.21000000000000002\n",
-            "0.706\n",
+            "0.703\n",
             "Generated samples \n",
-            "Mean = 0.706\n",
-            "Variance = 0.20756400000000003\n"
+            "Mean = 0.703\n",
+            "Variance = 0.208791\n"
           ],
           "name": "stdout"
         }
