--- a/Assignment_4/codes/assignment4.tex
+++ b/Assignment_4/codes/assignment4.tex
@@ -77,7 +77,8 @@ of three coins.
 \end{center}
 (ii)Let the event be defined as
 \\X = Number of tails in the simultaneous tosses of three coins.
-\\Outcomes =\{ HHH,HHT,HTH,HTT,THH,THH,TTH,TTT\}
+\\Outcomes =\{ HHH,HHT,HTH,HTT,THH,THH,TTH,
+TTT\}
 \\Hence the probability distribution of X is: 
 
 \begin{center}
@@ -90,8 +91,9 @@ of three coins.
 \end{center}
 (iii)Let the event be defined as
 \\X = Number of heads in four tosses of a coin.
-\\Outcomes =\{ HHHH,HHHT,HHTH,HHTT,HTHH,HTHH,
-HTTH,HTTT,THHH,THHT,THTH,THTT,TTHH, TTHH,TTTH,TTTT\}
+\\Outcomes =\{ HHHH,HHHT,HHTH,HHTT,HTHH,
+HTHH,HTTH,HTTT,THHH,THHT,THTH,THTT,
+TTHH, TTHH,TTTH,TTTT\}
 \\Hence the probability distribution of X is: 
 
 \begin{center}
@@ -106,13 +108,22 @@ HTTH,HTTT,THHH,THHT,THTH,THTT,TTHH, TTHH,TTTH,TTTT\}
 \begin{figure}[h]
 \renewcommand{\theenumi}{1}
 \centering
-\includegraphics[ width=\columnwidth , height =3cm]{bayes.png}
-\caption{Result obtained from python code }
+\includegraphics[ width=\columnwidth , height =4cm]{2toss_coin.PNG}
+\caption{PDF for tossing a fair coin twice }
 \label{Fig:1}
+\\
+\includegraphics[ width=\columnwidth , height =5cm]{3toss_coin.PNG}
+\caption{PDF for tossing a fair coin thrice }
+\label{Fig:2}\\
+\includegraphics[ width=\columnwidth , height =5cm]{4toss_coin.PNG}
+\caption{PDF for tossing a fair coin 4 times }
+\label{Fig:3}
 \end{figure}
+
+
 \\\textbf{Download python code from here}\\
 \begin{lstlisting}
-https://github.com/Swati-Mohanty/AI5002/blob/main/Assignment_4/codes/cintoss.py
+https://github.com/Swati-Mohanty/AI5002/blob/main/Assignment_4/codes/cointoss.py
 \end{lstlisting}
 \\\textbf{Download latex code from here-}\\
 \begin{lstlisting}
