--- a/Assignment_4/codes/assignment4.tex
+++ b/Assignment_4/codes/assignment4.tex
@@ -71,7 +71,7 @@ of three coins.
 \begin{tabular}{ |c|c|c|c| } 
  \hline
  X & 0 & 1 & 2 \\\hline 
- P(X) & 1/4 & 1/2 & 1/2 \\ 
+ P(X) & 1/4 & 1/2 & 1/4 \\ 
  \hline
 \end{tabular}
 \end{center}
@@ -104,19 +104,19 @@ TTHH, TTHH,TTTH,TTTT\}
  \hline
 \end{tabular}
 \end{center}
-\\The PDF graphs were plotted using the python code.
+\\The probabilities were simulated using the python code.
 \begin{figure}[h]
 \renewcommand{\theenumi}{1}
 \centering
-\includegraphics[ width=\columnwidth , height =4cm]{2toss_coin.PNG}
-\caption{PDF for tossing a fair coin twice }
+\includegraphics[ width=\columnwidth , height =3cm]{2toss.PNG}
+\caption{Simulation for tossing a fair coin twice }
 \label{Fig:1}
 \\
-\includegraphics[ width=\columnwidth , height =5cm]{3toss_coin.PNG}
-\caption{PDF for tossing a fair coin thrice }
+\includegraphics[ width=\columnwidth , height =3cm]{3toss.PNG}
+\caption{Simulation for tossing a fair coin thrice }
 \label{Fig:2}\\
-\includegraphics[ width=\columnwidth , height =5cm]{4toss_coin.PNG}
-\caption{PDF for tossing a fair coin 4 times }
+\includegraphics[ width=\columnwidth , height =4cm]{4toss.PNG}
+\caption{Simulation for tossing a fair coin 4 times }
 \label{Fig:3}
 \end{figure}
 
