--- a/Assignment_4/codes/assignment4.tex
+++ b/Assignment_4/codes/assignment4.tex
@@ -61,46 +61,89 @@ of three coins.
 \\(iii) number of heads in four tosses of a coin.
 
 \section{Solution}
+Let Y denote the event of tossing a coin. Considering a fair coin, the probability of getting a Head or Tail P(Y) = 0.5
+\\We have i coin tosses, with probability p of Heads and (1-p) of Tails. We
+conduct the trials independently. 
+\\In general , the probability of getting of j Head/Tail is given as:
+\begin{align}
+    P(Y = j) = \frac{n!}{j!(n-j)!} { p^j (1-p)^{(n-j)}}
+\end{align}
+Consider a random variable X where X = Number of successes.Suppose we have n trials. We write
+X \textasciitilde B(n, p) 
+\\(i)
+Let X denote the random variable of number of Heads.
+The probability distribution of getting exactly j Heads in 2 tosses of coin is given as:
+\\X \textasciitilde B(2, 0.5) 
+\\Using equation 
+\begin{align}
+    P(X = j) = \frac{2!}{j!(2-j)!} { 0.5^j (1-0.5)^{(2-j)}}
+\end{align}
+We get the pdf as below:
+\begin{align}
+    P(X=0) = \frac{2!}{0!(2-0)!} { 0.5^0 (1-0.5)^{(2-0)}}
+    =0.25
+    \\P(X=1) = \frac{2!}{1!(2-1)!} { 0.5^1 (1-0.5)^{(2-1)}} = 0.5
+    \\P(X=2) = \frac{2!}{2!(2-2)!} { 0.5^2 (1-0.5)^{(2-2)}} = 0.25
+\end{align}
 
-(i)Let the event be defined as
-\\X = Number of heads when a coin is tossed twice
-\\Outcomes =\{HH,HT,TH,TT\}
-\\Hence the probability distribution of X is: 
-
+\\The distribution table is given as:
 \begin{center}
 \begin{tabular}{ |c|c|c|c| } 
  \hline
- X & 0 & 1 & 2 \\\hline 
- P(X) & 1/4 & 1/2 & 1/4 \\ 
+ j & 0 & 1 & 2 \\\hline 
+ P(X=j) & 0.25 &0.5 & 0.25 \\ 
  \hline
 \end{tabular}
 \end{center}
-(ii)Let the event be defined as
-\\X = Number of tails in the simultaneous tosses of three coins.
-\\Outcomes =\{ HHH,HHT,HTH,HTT,THH,THH,TTH,
-TTT\}
-\\Hence the probability distribution of X is: 
+
+(ii)Let X denote the random variable of number of Tails.
+The probability distribution of getting exactly j Tails in 3 tosses of coin is given as:
+\\X \textasciitilde B(3, 0.5) 
+\\Using equation 
+\begin{align}
+    P(X = j) = \frac{3!}{j!(3-j)!} { 0.5^j (1-0.5)^{(3-j)}}
+\end{align}
+We get the pdf as below:
+\begin{align}
+    P(X=0) = \frac{3!}{0!(3-0)!} { 0.5^0 (1-0.5)^{(3-0)}}
+    =0.125
+    \\P(X=1) = \frac{3!}{1!(3-1)!} { 0.5^1 (1-0.5)^{(3-1)}} = 0.375
+    \\P(X=2) = \frac{3!}{2!(3-2)!} { 0.5^2 (1-0.5)^{(3-2)}} = 0.375
+    \\P(X=3) = \frac{3!}{3!(3-3)!} { 0.5^3 (1-0.5)^{(3-3)}} = 0.125
+\end{align}
+\\The probability distribution of X is: 
 
 \begin{center}
 \begin{tabular}{ |c|c|c|c|c| } 
  \hline
- X & 0 & 1 & 2 & 3 \\ \hline
- P(X) & 1/8 & 3/8 & 3/8 & 1/8 \\ 
+ j & 0 & 1 & 2 & 3 \\ \hline
+ P(X=j) & 0.125& 0.375 & 0.375 & 0.125 \\ 
  \hline
 \end{tabular}
 \end{center}
-(iii)Let the event be defined as
-\\X = Number of heads in four tosses of a coin.
-\\Outcomes =\{ HHHH,HHHT,HHTH,HHTT,HTHH,
-HTHH,HTTH,HTTT,THHH,THHT,THTH,THTT,
-TTHH, TTHH,TTTH,TTTT\}
-\\Hence the probability distribution of X is: 
+(iii)Let X denote the random variable of number of Heads.
+The probability distribution of getting exactly j Heads in 4 tosses of coin is given as:
+\\X \textasciitilde B(4, 0.5) 
+\\Using equation 
+\begin{align}
+    P(X = j) = \frac{4!}{j!(4-j)!} { 0.5^j (1-0.5)^{(4-j)}}
+\end{align}
+We get the pdf as below:
+\begin{align}
+    P(Y3=0) = \frac{4!}{0!(4-0)!} { 0.5^0 (1-0.5)^{(4-0)}}
+    =0.0625
+    \\P(X=1) = \frac{4!}{0!(4-1)!} { 0.5^1 (1-0.5)^{(4-1)}} = 0.25
+    \\P(X=2) = \frac{4!}{2!(4-2)!} { 0.5^2 (1-0.5)^{(4-2)}} = 0.375
+    \\P(X=3) = \frac{4!}{3!(4-3)!} { 0.5^3 (1-0.5)^{(4-4)}} = 0.25
+    \\P(X=4) = \frac{4!}{0!(4-4)!} { 0.5^4 (1-0.5)^{(4-4)}} = 0.0625
+\end{align}
+\\The probability distribution of X is: 
 
 \begin{center}
 \begin{tabular}{ |c|c|c|c|c|c| } 
  \hline
- X & 0 & 1 & 2 & 3 & 4 \\ \hline
- P(X) & 1/16 & 1/4 & 3/8 & 1/4 & 1/16 \\ 
+ j & 0 & 1 & 2 & 3 & 4 \\ \hline
+ P(X=j) & 0.0625 & 0.25 & 0.375 & 0.25 & 0.0625 \\ 
  \hline
 \end{tabular}
 \end{center}
@@ -108,16 +151,11 @@ TTHH, TTHH,TTTH,TTTT\}
 \begin{figure}[h]
 \renewcommand{\theenumi}{1}
 \centering
-\includegraphics[ width=\columnwidth , height =3cm]{2toss.PNG}
-\caption{Simulation for tossing a fair coin twice }
+\includegraphics[ width=\columnwidth , height =3cm]{cointoss.PNG}
+\caption{Simulation for tossing a fair coin  }
 \label{Fig:1}
 \\
-\includegraphics[ width=\columnwidth , height =3cm]{3toss.PNG}
-\caption{Simulation for tossing a fair coin thrice }
-\label{Fig:2}\\
-\includegraphics[ width=\columnwidth , height =4cm]{4toss.PNG}
-\caption{Simulation for tossing a fair coin 4 times }
-\label{Fig:3}
+
 \end{figure}
 
 
