--- a/Assignment_4/codes/assignment4.tex
+++ b/Assignment_4/codes/assignment4.tex
@@ -20,6 +20,7 @@
 \usepackage{multirow}
 %\usepackage{algorithm}
 %\usepackage{algpseudocode}
+\newcommand*{\Comb}[2]{{}^{#1}C_{#2}}%
 \usepackage{enumitem}
 \usepackage{mathtools}
 \usepackage{gensymb}
@@ -66,7 +67,7 @@ Let Y denote the event of tossing a coin. Considering a fair coin, the probabili
 conduct the trials independently. 
 \\In general , the probability of getting of j Head/Tail is given as:
 \begin{align}
-    P(Y = j) = \frac{n!}{j!(n-j)!} { p^j (1-p)^{(n-j)}}
+    P(Y = j) = \Comb{n}{j}\times { p^j (1-p)^{(n-j)}}
 \end{align}
 Consider a random variable X where X = Number of successes.Suppose we have n trials. We write
 X \textasciitilde B(n, p) 
@@ -76,14 +77,14 @@ The probability distribution of getting exactly j Heads in 2 tosses of coin is g
 \\X \textasciitilde B(2, 0.5) 
 \\Using equation 
 \begin{align}
-    P(X = j) = \frac{2!}{j!(2-j)!} { 0.5^j (1-0.5)^{(2-j)}}
+    P(X = j) = \Comb{2}{j}\times { 0.5^j (1-0.5)^{(2-j)}}
 \end{align}
 We get the pdf as below:
 \begin{align}
-    P(X=0) = \frac{2!}{0!(2-0)!} { 0.5^0 (1-0.5)^{(2-0)}}
+    P(X=0) =\Comb{2}{0}\times { 0.5^0 (1-0.5)^{(2-0)}}
     =0.25
-    \\P(X=1) = \frac{2!}{1!(2-1)!} { 0.5^1 (1-0.5)^{(2-1)}} = 0.5
-    \\P(X=2) = \frac{2!}{2!(2-2)!} { 0.5^2 (1-0.5)^{(2-2)}} = 0.25
+    \\P(X=1) = \Comb{2}{1}\times { 0.5^1 (1-0.5)^{(2-1)}} = 0.5
+    \\P(X=2) = \Comb{2}{2}\times { 0.5^2 (1-0.5)^{(2-2)}} = 0.25
 \end{align}
 
 \\The distribution table is given as:
@@ -101,15 +102,15 @@ The probability distribution of getting exactly j Tails in 3 tosses of coin is g
 \\X \textasciitilde B(3, 0.5) 
 \\Using equation 
 \begin{align}
-    P(X = j) = \frac{3!}{j!(3-j)!} { 0.5^j (1-0.5)^{(3-j)}}
+    P(X = j) = \Comb{3}{j}\times { 0.5^j (1-0.5)^{(3-j)}}
 \end{align}
 We get the pdf as below:
 \begin{align}
-    P(X=0) = \frac{3!}{0!(3-0)!} { 0.5^0 (1-0.5)^{(3-0)}}
+    P(X=0) = \Comb{3}{0}\times { 0.5^0 (1-0.5)^{(3-0)}}
     =0.125
-    \\P(X=1) = \frac{3!}{1!(3-1)!} { 0.5^1 (1-0.5)^{(3-1)}} = 0.375
-    \\P(X=2) = \frac{3!}{2!(3-2)!} { 0.5^2 (1-0.5)^{(3-2)}} = 0.375
-    \\P(X=3) = \frac{3!}{3!(3-3)!} { 0.5^3 (1-0.5)^{(3-3)}} = 0.125
+    \\P(X=1) = \Comb{3}{1}\times { 0.5^1 (1-0.5)^{(3-1)}} = 0.375
+    \\P(X=2) = \Comb{3}{2}\times { 0.5^2 (1-0.5)^{(3-2)}} = 0.375
+    \\P(X=3) = \Comb{3}{3}\times { 0.5^3 (1-0.5)^{(3-3)}} = 0.125
 \end{align}
 \\The probability distribution of X is: 
 
@@ -126,16 +127,16 @@ The probability distribution of getting exactly j Heads in 4 tosses of coin is g
 \\X \textasciitilde B(4, 0.5) 
 \\Using equation 
 \begin{align}
-    P(X = j) = \frac{4!}{j!(4-j)!} { 0.5^j (1-0.5)^{(4-j)}}
+    P(X = j) = \Comb{4}{j}\times { 0.5^j (1-0.5)^{(4-j)}}
 \end{align}
 We get the pdf as below:
 \begin{align}
-    P(Y3=0) = \frac{4!}{0!(4-0)!} { 0.5^0 (1-0.5)^{(4-0)}}
+    P(X=0) =(\Comb{4}{0}){ 0.5^0 (1-0.5)^{(4-0)}}
     =0.0625
-    \\P(X=1) = \frac{4!}{0!(4-1)!} { 0.5^1 (1-0.5)^{(4-1)}} = 0.25
-    \\P(X=2) = \frac{4!}{2!(4-2)!} { 0.5^2 (1-0.5)^{(4-2)}} = 0.375
-    \\P(X=3) = \frac{4!}{3!(4-3)!} { 0.5^3 (1-0.5)^{(4-4)}} = 0.25
-    \\P(X=4) = \frac{4!}{0!(4-4)!} { 0.5^4 (1-0.5)^{(4-4)}} = 0.0625
+    \\P(X=1) = \Comb{4}{1}\times { 0.5^1 (1-0.5)^{(4-1)}} = 0.25
+    \\P(X=2) = \Comb{4}{2}\times { 0.5^2 (1-0.5)^{(4-2)}} = 0.375
+    \\P(X=3) = \Comb{4}{3}\times { 0.5^3 (1-0.5)^{(4-4)}} = 0.25
+    \\P(X=4) = \Comb{4}{4}\times { 0.5^4 (1-0.5)^{(4-4)}} = 0.0625
 \end{align}
 \\The probability distribution of X is: 
 
@@ -147,19 +148,16 @@ We get the pdf as below:
  \hline
 \end{tabular}
 \end{center}
-\\The probabilities were simulated using the python code.
+The probabilities were simulated using the python code.
 \begin{figure}[h]
 \renewcommand{\theenumi}{1}
 \centering
 \includegraphics[ width=\columnwidth , height =3cm]{cointoss.PNG}
 \caption{Simulation for tossing a fair coin  }
 \label{Fig:1}
-\\
-
 \end{figure}
 
-
-\\\textbf{Download python code from here}\\
+\textbf{Download python code from here}\\
 \begin{lstlisting}
 https://github.com/Swati-Mohanty/AI5002/blob/main/Assignment_4/codes/cointoss.py
 \end{lstlisting}
