--- a/Assignment_4/codes/assignment4.tex
+++ b/Assignment_4/codes/assignment4.tex
@@ -67,7 +67,7 @@ Let Y denote the event of tossing a coin. Considering a fair coin, the probabili
 conduct the trials independently. 
 \\In general , the probability of getting of j Head/Tail is given as:
 \begin{align}
-    P(Y = j) = \Comb{n}{j}\times { p^j (1-p)^{(n-j)}}
+    P(Y = j) = \Comb{n}{j}\times { p^j (1-p)^{(n-j)}} 
 \end{align}
 Consider a random variable X where X = Number of successes.Suppose we have n trials. We write
 X \textasciitilde B(n, p) 
@@ -77,14 +77,14 @@ The probability distribution of getting exactly j Heads in 2 tosses of coin is g
 \\X \textasciitilde B(2, 0.5) 
 \\Using equation 
 \begin{align}
-    P(X = j) = \Comb{2}{j}\times { 0.5^j (1-0.5)^{(2-j)}}
+    P(X = j) = \Comb{2}{j}\times { 0.5^j (1-0.5)^{(2-j)}} =\Comb{2}{j}\times { 0.5^2}
 \end{align}
 We get the pdf as below:
 \begin{align}
-    P(X=0) =\Comb{2}{0}\times { 0.5^0 (1-0.5)^{(2-0)}}
+    P(X=0) =\Comb{2}{0}\times { 0.5^2}
     =0.25
-    \\P(X=1) = \Comb{2}{1}\times { 0.5^1 (1-0.5)^{(2-1)}} = 0.5
-    \\P(X=2) = \Comb{2}{2}\times { 0.5^2 (1-0.5)^{(2-2)}} = 0.25
+    \\P(X=1) = \Comb{2}{1}\times { 0.5^2} = 0.5
+    \\P(X=2) = \Comb{2}{2}\times { 0.5^2} = 0.25
 \end{align}
 
 \\The distribution table is given as:
@@ -102,15 +102,15 @@ The probability distribution of getting exactly j Tails in 3 tosses of coin is g
 \\X \textasciitilde B(3, 0.5) 
 \\Using equation 
 \begin{align}
-    P(X = j) = \Comb{3}{j}\times { 0.5^j (1-0.5)^{(3-j)}}
+    P(X = j) = \Comb{3}{j}\times { 0.5^j (1-0.5)^{(3-j)}} =\Comb{3}{j}\times { 0.5^3}
 \end{align}
 We get the pdf as below:
 \begin{align}
     P(X=0) = \Comb{3}{0}\times { 0.5^0 (1-0.5)^{(3-0)}}
     =0.125
-    \\P(X=1) = \Comb{3}{1}\times { 0.5^1 (1-0.5)^{(3-1)}} = 0.375
-    \\P(X=2) = \Comb{3}{2}\times { 0.5^2 (1-0.5)^{(3-2)}} = 0.375
-    \\P(X=3) = \Comb{3}{3}\times { 0.5^3 (1-0.5)^{(3-3)}} = 0.125
+    \\P(X=1) = \Comb{3}{1}\times { 0.5^3} = 0.375
+    \\P(X=2) = \Comb{3}{2}\times { 0.5^3} = 0.375
+    \\P(X=3) = \Comb{3}{3}\times { 0.5^3} = 0.125
 \end{align}
 \\The probability distribution of X is: 
 
@@ -127,16 +127,16 @@ The probability distribution of getting exactly j Heads in 4 tosses of coin is g
 \\X \textasciitilde B(4, 0.5) 
 \\Using equation 
 \begin{align}
-    P(X = j) = \Comb{4}{j}\times { 0.5^j (1-0.5)^{(4-j)}}
+    P(X = j) = \Comb{4}{j}\times { 0.5^j (1-0.5)^{(4-j)}} =\Comb{4}{j}\times { 0.5^4}
 \end{align}
 We get the pdf as below:
 \begin{align}
     P(X=0) =(\Comb{4}{0}){ 0.5^0 (1-0.5)^{(4-0)}}
     =0.0625
-    \\P(X=1) = \Comb{4}{1}\times { 0.5^1 (1-0.5)^{(4-1)}} = 0.25
-    \\P(X=2) = \Comb{4}{2}\times { 0.5^2 (1-0.5)^{(4-2)}} = 0.375
-    \\P(X=3) = \Comb{4}{3}\times { 0.5^3 (1-0.5)^{(4-4)}} = 0.25
-    \\P(X=4) = \Comb{4}{4}\times { 0.5^4 (1-0.5)^{(4-4)}} = 0.0625
+    \\P(X=1) = \Comb{4}{1}\times { 0.5^4} = 0.25
+    \\P(X=2) = \Comb{4}{2}\times { 0.5^4} = 0.375
+    \\P(X=3) = \Comb{4}{3}\times { 0.5^4} = 0.25
+    \\P(X=4) = \Comb{4}{4}\times { 0.5^4} = 0.0625
 \end{align}
 \\The probability distribution of X is: 
 
