--- a/Assignment_5/codes/assignment5.tex
+++ b/Assignment_5/codes/assignment5.tex
@@ -63,25 +63,33 @@ wins / loses.
 
 \section{Solution}
 Let X denote the random variable of winning/losing in the game.
-\\P(X = 1)= P(win) = getting a 6 on rolling a fair die.
-\\P(X = 0)= P(loss) = getting a 6 on rolling a fair die.
-\\P(X = 1) = p =$\frac{1}{6}$  = 0.167
-\\P(X = 0) = 1-p = $\frac{5}{6}$ = 0.833
-\\Let Y denote the random variable of winning the game in Nth trial, there can be 4 possible cases with the following probability:
-\\(i)Wins in first throw:\begin{align}
+\\P(X = 1)= P(win) = p =$\frac{1}{6}$  = 0.167
+\\P(X = 0)= P(loss) = 1-p = $\frac{5}{6}$ = 0.833.
+ 
+\\Let Y denote the random variable of winning the game in Nth trial,A(Y) denote the amount in each case.The possible cases are:
+(i)Wins in first throw:\begin{align}
     P(Y=1) = p = 0.167
+    \\A(Y=1) = +1
 \end{align}
-\\(ii)Wins in the second throw :\begin{align}
+(ii)Wins in the second throw :\begin{align}
     P(Y=2) = (1-p)\times p = 0.139
+    \\A(Y=2) = -1+1=0
 \end{align}
-\\(ii)Wins in the third throw :\begin{align}
+(iii)Wins in the third throw :\begin{align}
     P(Y=3) = (1-p)\times(1-p)\times p = 0.107
+    \\A(Y=3) = -1-1+1=-1
 \end{align}
-\\(ii)Does not wins in any throw :\begin{align}
+(iv)Does not wins in any throw :\begin{align}
     P(Y=3) = (1-p)\times(1-p)\times (1-p) = 0.596
+    \\A(Y=3) = -1-1-1=-3
 \end{align}
 
-Net amount = P(Y=1)\times1 +P(Y=1)\times(-1+1) + P(Y=1)\times(-1-1+1) + P(Y=1)\times(-1-1-1) = -1.73
+Net amount = Expectation = E[Y] 
+\begin{align}
+    E[Y] =  \sum_{n=1}^{3} P(Y=n)A(Y=n)
+    \\0.167\times1 + 0 +0.107\times-1 + 0.596\times-3
+    \\=-1.73
+\end{align}
 
 
 
