--- a/Assignment_5/codes/assignment5.tex
+++ b/Assignment_5/codes/assignment5.tex
@@ -68,26 +68,27 @@ Let X denote the random variable of winning/losing in the game.
  
 \\Let Y denote the random variable of winning the game in Nth trial,A(Y) denote the amount in each case.The possible cases are:
 (i)Wins in first throw:\begin{align}
-    P(Y=1) = p = 0.167
+    P(Y=1) = p = p
     \\A(Y=1) = +1
 \end{align}
 (ii)Wins in the second throw :\begin{align}
-    P(Y=2) = (1-p)\times p = 0.139
+    P(Y=2) = (1-p)\times p = p-p^2
     \\A(Y=2) = -1+1=0
 \end{align}
 (iii)Wins in the third throw :\begin{align}
-    P(Y=3) = (1-p)\times(1-p)\times p = 0.107
+    P(Y=3) = (1-p)\times(1-p)\times p = p(1-p)^2
     \\A(Y=3) = -1-1+1=-1
 \end{align}
 (iv)Does not wins in any throw :\begin{align}
-    P(Y=3) = (1-p)\times(1-p)\times (1-p) = 0.596
+    P(Y=3) = (1-p)\times(1-p)\times (1-p) = (1-p)^3
     \\A(Y=3) = -1-1-1=-3
 \end{align}
 
 Net amount = Expectation = E[Y] 
 \begin{align}
     E[Y] =  \sum_{n=1}^{3} P(Y=n)A(Y=n)
-    \\0.167\times1 + 0 +0.107\times-1 + 0.596\times-3
+    \\= (p\times 1) +0 + (p(1-p)^2 \times -1) +((1-p)^3\times -3)
+    \\=0.167\times1 +0.107\times-1 + 0.596\times-3
     \\=-1.73
 \end{align}
 
